Use Colour in Sampler